Thu Aug  9 13:39:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.cpp:
          Initialise local variable to resolve GCC warning

        * ace/config-linux-common.h:
          Added ACE_HAS_BROKEN_THREAD_KEYFREE so that on Linux the Log_Msg
          does cleanup its TSS data which resolves problems when loading
          and unloading the ACE shared library from an application that
          doesn't use ACE at all

Wed Aug  8 22:30:53 UTC 2007  Steve Huston  <shuston@riverace.com>

        * configure.ac: Moved check for ACE_LACKS_PTHREAD_ATTR_SETSTACK to
          near the other stack-related pthreads checks.

        * m4/compiler.m4: Add +We to WERROR setting to force compile
          warnings to be errors when desired.

Wed Aug  8 11:35:01 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * bin/Makefile.am:
        * examples/QOS/Change_Receiver_FlowSpec/Makefile.am:
        * examples/QOS/Change_Sender_TSpec/Makefile.am:
        * examples/QOS/Diffserv/Makefile.am:
        * examples/QOS/Simple/Makefile.am:

          The *_LDADD sections for these had wrong paths for the libraries.

Wed Aug  8 09:05:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Truncate.h:
          Added <signed long, signed int> specialization for BCB

Tue Aug  7 19:04:25 UTC 2007  Chad Elliott  <elliott_c@ociweb.com>

        * apps/drwho/drwho.mpc:

          Added the missing exename settings for the client and server.  The
          main() was changed to ACE_TMAIN().

Tue Aug  7 12:46:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/compiler.bor:
          Use ACE_TEXT instead of ACE_LIB_TEXT

Tue Aug  7 12:15:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * html/stats/simple_footprint.html:
          Removed Domain added Messaging

Mon Aug  6 18:03:12 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * m4/compiler.m4: